update models, db context

--- a/PTJ_API/PTJ_API.csproj
+++ b/PTJ_API/PTJ_API.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PTJ_Data\PTJ_Data.csproj" />
+    <ProjectReference Include="..\PTJ_Models\PTJ_Models.csproj" />
+    <ProjectReference Include="..\PTJ_Service\PTJ_Service.csproj" />
+  </ItemGroup>
+
 </Project>
