--- a/PTJ_Data/PTJ_Data.csproj
+++ b/PTJ_Data/PTJ_Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PTJ_Models\PTJ_Models.csproj" />
+  </ItemGroup>
+
 </Project>
