--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -5,8 +5,6 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "MyCnn": "Server=localhost;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+    "AllowedHosts": "*"
+    
 }
