--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -5,12 +5,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-<<<<<<< HEAD
-    "AllowedHosts": "*"
-    
-=======
+
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
     }
->>>>>>> parent of 86d72ad (AIRecomment_Demo1)
+
 }
