--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -7,7 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
+        "MyCnn": "Server=localhost;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
     }
-
 }
