--- a/PTJ_API/PTJ_API.csproj
+++ b/PTJ_API/PTJ_API.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="8.0.1" />
+  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	</ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PTJ_Data\PTJ_Data.csproj" />
     <ProjectReference Include="..\PTJ_Models\PTJ_Models.csproj" />
     <ProjectReference Include="..\PTJ_Service\PTJ_Service.csproj" />
