--- a/PTJ_Service/PTJ_Service.csproj
+++ b/PTJ_Service/PTJ_Service.csproj
@@ -9,5 +9,12 @@
   <ItemGroup>
     <ProjectReference Include="..\PTJ_Data\PTJ_Data.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+		<PackageReference Include="System.Net.Http.Json" Version="8.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	</ItemGroup>
 </Project>
