--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,12 +1,12 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "MyCnn": "Server=localhost;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyCnn": "Server=localhost;Database=JobMatching_DB;User Id=sa;Password=123456;TrustServerCertificate=True;Encrypt=False"
+  }
 }
