Update Auth(fix register,  verify email)

--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,11 +1,41 @@
 {
+    "ConnectionStrings": {
+        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+
+    "Jwt": {
+        "Issuer": "PTJ_API",
+        "Audience": "PTJ_Client",
+        "SigningKey": "CHANGE_ME_TO_A_64+_CHAR_RANDOM_SECRET_KEY_____________________________",
+        "AccessTokenMinutes": 15,
+        "RefreshTokenDays": 60
+    },
+
+    "Email": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "User": "yourgmail@gmail.com",
+        "Password": "YOUR_16_CHAR_GOOGLE_APP_PASSWORD",
+        "From": "yourgmail@gmail.com",
+        "FromName": "PTJ Support"
+    },
+
+    "Google": {
+        "ClientId": "YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
+    },
+
+    "App": {
+        "BaseUrl": "https://localhost:7100"
+    },
+    "Frontend": {
+        "BaseUrl": "https://localhost:5173"
+    },
+
+    "AllowedHosts": "*",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
-    },
-    "ConnectionStrings": {
-        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatchingAI_DB;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
