--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -4,11 +4,11 @@
     },
 
     "Jwt": {
-        "Issuer": "PTJ_API",
-        "Audience": "PTJ_Client",
-        "SigningKey": "CHANGE_ME_TO_A_64+_CHAR_RANDOM_SECRET_KEY_____________________________",
-        "AccessTokenMinutes": 15,
-        "RefreshTokenDays": 60
+        "Issuer": "PTJ",
+        "Audience": "PTJUsers",
+        "SigningKey": "THIS_IS_A_SECRET_KEY_FOR_PTJ_AUTH_2025",
+        "AccessTokenMinutes": 60,
+        "RefreshTokenDays": 7
     },
 
     "Email": {
