--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,12 +1,40 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+
+    "Jwt": {
+        "Issuer": "PTJ",
+        "Audience": "PTJUsers",
+        "SigningKey": "THIS_IS_A_SECRET_KEY_FOR_PTJ_AUTH_2025",
+        "AccessTokenMinutes": 60,
+        "RefreshTokenDays": 7
+    },
+
+    "Email": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "User": "smarparttimejobfinder3@gmail.com",
+        "Password": "jjpg agxs vrbh lbna",
+        "From": "smarparttimejobfinder3@gmail.com",
+        "FromName": "PTJ Support"
+    },
+
+    "App": {
+        "BaseUrl": "https://localhost:7100"
+    },
+    "Frontend": {
+        "BaseUrl": "https://localhost:5173"
+    },
+    "Google": {
+        "ClientId": "811288760849-0uj7a9ai3vq7tnujov4i5f6013pbvmhb.apps.googleusercontent.com"
+
+    },
+    "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MyCnn": "Server=localhost;Database=JobMatching_DB;User Id=sa;Password=123456;TrustServerCertificate=True;Encrypt=False"
-  }
 }
