fix config image

--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+        "MyCnn": "Server=MSI;Database=JobMatching_DB;User ID=sa;Password=123;TrustServerCertificate=True;Encrypt=True;"
     },
 
     "Jwt": {
@@ -36,5 +36,11 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
+    },
+
+    "Cloudinary": {
+        "CloudName": "do5rtjymt",
+        "ApiKey": "282822439775547",
+        "ApiSecret": "zUkmRcc_R1fY6RiW2JChecjcaUI"
     }
 }
