--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "MyCnn": "Server=(localdb)\\MSSQLLocalDB;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
 
     "Jwt": {
         "Issuer": "PTJ",
