--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -1,7 +1,8 @@
 {
     "ConnectionStrings": {
-        "MyCnn": "Server=MSI;Database=JobMatching_DB;User ID=sa;Password=123;TrustServerCertificate=True;Encrypt=True;"
+        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
     },
+
 
     "Jwt": {
         "Issuer": "PTJ",
