--- a/PTJ_API/appsettings.json
+++ b/PTJ_API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MyCnn": "Server=(localdb)\\MSSQLLocalDB;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "MyCnn": "Server=LAPTOP-G2QRUFTF;Database=JobMatching_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
   "LMStudio": {
     "Url": "http://127.0.0.1:1234/v1",
     "EmbeddingModel": "text-embedding-nomic-embed-text-v2-moe"
@@ -40,7 +40,7 @@
     "BaseUrl": "https://localhost:7100"
   },
   "Frontend": {
-    "BaseUrl": "https://localhost:5173"
+    "BaseUrl": "https://localhost:5174"
   },
   "Google": {
     //"ClientId": "694247636833-8cse6suomdjm9kfa1kbko5gt3hiucd7v.apps.googleusercontent.com",
