--- a/PTJ_Service.Tests/PTJ_Service.Tests.csproj
+++ b/PTJ_Service.Tests/PTJ_Service.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,9 +11,19 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PTJ_API\PTJ_API.csproj" />
+    <ProjectReference Include="..\PTJ_Data\PTJ_Data.csproj" />
+    <ProjectReference Include="..\PTJ_Models\PTJ_Models.csproj" />
+    <ProjectReference Include="..\PTJ_Service\PTJ_Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
